syntax = "proto3";

package kyve.query.v1beta1;

import "google/api/annotations.proto";
import "kyve/bundles/v1beta1/params.proto";
import "kyve/delegation/v1beta1/params.proto";
import "kyve/pool/v1beta1/params.proto";
import "kyve/stakers/v1beta1/params.proto";

option go_package = "github.com/KYVENetwork/chain/x/query/types";

// QueryPool ...
service QueryParams {
  // Pools queries for all pools.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/kyve/query/v1beta1/params";
  }
}

// =======
// /params
// =======

// QueryParamsRequest ...
message QueryParamsRequest {}

// QueryParamsResponse ...
message QueryParamsResponse {
  // bundles_params ...
  kyve.bundles.v1beta1.Params bundles_params = 1;
  // delegation_params ...
  kyve.delegation.v1beta1.Params delegation_params = 2;
  // pool_params ...
  kyve.pool.v1beta1.Params pool_params = 3;
  // stakers_params ...
  kyve.stakers.v1beta1.Params stakers_params = 4;
}
